--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -1,13 +1,13 @@
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    min-height: 100vh;
-    scroll-behavior: smooth;
-    text-rendering: optimizeSpeed;
+  min-height: 100vh;
+  scroll-behavior: smooth;
+  text-rendering: optimizeSpeed;
 }
 
 h1,
@@ -18,34 +18,37 @@ h5,
 h6,
 p,
 input {
-    margin: 0;
+  margin: 0;
 }
 
 ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 a {
-    color: currentColor;
-    text-decoration: none;
+  color: currentColor;
+  text-decoration: none;
 }
 
 button {
-    cursor: pointer;
+  display: block;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
 }
 
 input,
 button,
 textarea,
 select {
-    font: inherit;
-    outline: none;
+  font: inherit;
+  outline: none;
 }
 
 img {
-    display: block;
-    max-width: 100%;
-    height: auto;
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
