--- a/src/styles/components/Header.module.scss
+++ b/src/styles/components/Header.module.scss
@@ -1,33 +1,125 @@
-@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
-@import '../base/variables';
+@import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
+@import "../base/variables";
 
 .headerContainer {
-    padding-top: 40px;
-    padding-bottom: 40px;
-    border-bottom: 1px solid $gray;
+  border-bottom: 1px solid $gray;
 }
 
 .nav {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
-    font-family: "Lobster", sans-serif;
-    font-size: 24px;
-    font-weight: 400;
+  padding-top: 40px;
+  padding-bottom: 40px;
 
-    span {
-        color: $red;
-    }
+  font-family: "Lobster", sans-serif;
+  font-size: 24px;
+  font-weight: 400;
+
+  span {
+    color: $red;
+  }
 }
 
 .navList {
-    display: flex;
-    gap: 60px;
+  display: flex;
+  gap: 60px;
+
+  a {
+    padding-top: 40px;
+    padding-bottom: 40px;
+
+    transition: all 0.3s ease-in-out;
+  }
+
+  a:hover {
+    color: $blueHover;
+  }
 }
 
 .socialsList {
-    display: flex;
-    gap: 40px;
+  display: flex;
+  gap: 40px;
+
+  a {
+    transition: all 0.3s ease-in-out;
+  }
+
+  a:hover {
+    fill: $blueHover;
+  }
+}
+
+.mobileContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.menuBtn {
+    transition: all 0.3s ease-in-out;
+}
+
+.menuBtn:hover, .menuBtn:focus {
+    fill: $blueHover;
+}
+
+.crossBtn {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+
+  width: 40px;
+  padding: 10px;
+  border: 1px solid $gray;
+  border-radius: 50%;
+
+transition: all 0.3s ease-in-out;
+}
+
+.crossBtn:hover, .crossBtn:focus {
+    border-color: $blueHover;
+    background-color: $white;
+}
+
+.mobileBox {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
+
+  width: 50%;
+  height: 100%;
+  padding-top: 80px;
+
+  background-color: $blue;
+}
+
+.mobileList {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+
+  font-size: 20px;
+
+  a {
+    display: block;
+    width: 100%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+
+    transition: all 0.3s ease-in-out;
+  }
+
+  a:hover, a:focus {
+    color: $white;
+    background-color: $blueHover;
+  }
 }
