--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -1,5 +1,8 @@
 $white: #fff;
 $gray: rgba(0, 0, 0, 0.1);
+$black5: rgb(0, 0, 0, 0.05);
+$black60: rgb(0, 0, 0, 0.6);
+$black: #000;
 $red: #FF7426;
 $blue: #E7FAFE;
 $blueHover: #00d5ff;
