--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -4,6 +4,7 @@ body {
     font-family: "Inter", sans-serif;
     font-size: 16px;
     font-weight: 400;
+    letter-spacing: -0.02em;
 }
 
 h1, h2, h3, h4, h5, h6 {
