--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,3 @@
-@import './base/reset';
-@import './base/typography';
-@import './base/utilities';
+@import './reset';
+@import './typography';
+@import './utilities';
