--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,6 @@
 $white: #fff;
-$gray: rgba(0, 0, 0, 0.1);
 $black5: rgb(0, 0, 0, 0.05);
+$black10: rgba(0, 0, 0, 0.1);
 $black60: rgb(0, 0, 0, 0.6);
 $black: #000;
 $red: #FF7426;
