--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,9 +1,18 @@
 $white: #fff;
+$black: #000;
 $black5: rgb(0, 0, 0, 0.05);
 $black10: rgba(0, 0, 0, 0.1);
+$black20: rgba(0, 0, 0, 0.2);
 $black60: rgb(0, 0, 0, 0.6);
-$black: #000;
 $red: #FF7426;
 $blue: #E7FAFE;
 $blueHover: #00d5ff;
 $blueLiner: #E7F9FD;
+$bcgDarkGreen0: rgba(112, 130, 70, 0);
+$bcgDarkGreen10: rgba(112, 130, 70, 0.1);
+$bcgGreen0: rgba(108, 198, 63, 0);
+$bcgGreen10: rgba(108, 198, 63, 0.1);
+$bcgRed0: rgba(204, 38, 27, 0);
+$bcgRed10: rgba(204, 38, 27, 0.1);
+$bcgYellow0: rgba(240, 158, 0, 0);
+$bcgYellow10: rgba(240, 158, 0, 0.1);
