--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,10 +1,12 @@
 $white: #fff;
+$white60: rgba(255, 255, 255, 0.6);
 $black: #000;
 $black5: rgb(0, 0, 0, 0.05);
 $black10: rgba(0, 0, 0, 0.1);
 $black20: rgba(0, 0, 0, 0.2);
 $black60: rgb(0, 0, 0, 0.6);
 $red: #FF7426;
+$fusionRed: #FF6363;
 $blue: #E7FAFE;
 $blueHover: #00d5ff;
 $blueLiner: #E7F9FD;
@@ -16,3 +18,5 @@ $bcgRed0: rgba(204, 38, 27, 0);
 $bcgRed10: rgba(204, 38, 27, 0.1);
 $bcgYellow0: rgba(240, 158, 0, 0);
 $bcgYellow10: rgba(240, 158, 0, 0.1);
+$bcgGreenAd: #357355;
+$bcgBlackAd: #1D483B;
