--- a/src/components/Recipes/Recipes.module.scss
+++ b/src/components/Recipes/Recipes.module.scss
@@ -85,7 +85,7 @@
   padding-bottom: 32px;
 
   text-align: center;
-  background-image: url("../../assets/star.svg"),
+  background-image: url("../../assets/icons/recipes/star.svg"),
     linear-gradient($bcgGreenAd, $bcgBlackAd);
   background-position: center;
   background-repeat: no-repeat;
