fix build project

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
-@import "../../styles/variables";
+@import "@/styles/variables";
 
 .headerContainer {
   border-bottom: 1px solid $black10;
