--- a/src/components/Recipes/Recipes.module.scss
+++ b/src/components/Recipes/Recipes.module.scss
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
-@import "../../styles/variables";
+@import "@/styles/variables";
 
 .container {
   margin-top: 160px;
