--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,6 +4,7 @@ $black: #000;
 $black5: rgb(0, 0, 0, 0.05);
 $black10: rgba(0, 0, 0, 0.1);
 $black20: rgba(0, 0, 0, 0.2);
+$black40: rgba(0, 0, 0, 0.4);
 $black60: rgb(0, 0, 0, 0.6);
 $red: #FF7426;
 $fusionRed: #FF6363;
