--- a/src/components/Recipes/Recipes.module.scss
+++ b/src/components/Recipes/Recipes.module.scss
@@ -5,27 +5,11 @@
   margin-top: 160px;
 }
 
-.title {
-  text-align: center;
-  font-size: 36px;
-  letter-spacing: -0.04em;
-
-@media screen and (min-width: 1060px) {
-    font-size: 48px;
-}
-}
-
-.desc {
-  max-width: 706px;
-  margin-top: 24px;
-  margin-left: auto;
+.DescWrap {
+max-width: 706px;
+margin-left: auto;
   margin-right: auto;
-
   text-align: center;
-  line-height: 28px;
-  color: $black60;
-
- 
 }
 
 .gridBox {
