--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,7 +1,8 @@
-@import "@/styles/variables";
-
 .footerContainer {
+  max-width: 1440px;
   margin-top: 160px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .wrap {
