--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -8,6 +8,7 @@ $black40: rgba(0, 0, 0, 0.4);
 $black60: rgb(0, 0, 0, 0.6);
 $red: #FF7426;
 $fusionRed: #FF6363;
+$gray: #DBE2E5;
 $blue: #E7FAFE;
 $blueHover: #00d5ff;
 $blueLiner: #E7F9FD;
