--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -1,6 +1,7 @@
 .heroContainer {
   overflow: hidden;
   margin-top: 40px;
+  margin-bottom: 162px;
   border-radius: 30px;
 
   @media screen and (min-width: 1060px) {
