--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,4 @@
-$white: #fff;
+$white: rgb(255, 255, 255);
 $white60: rgba(255, 255, 255, 0.6);
 $black: #000;
 $black5: rgb(0, 0, 0, 0.05);
@@ -10,8 +10,8 @@ $red: #FF7426;
 $fusionRed: #FF6363;
 $gray: #DBE2E5;
 $blue: #E7FAFE;
-$blueHover: #00d5ff;
-$blueLiner: #E7F9FD;
+$blueHover: rgb(0, 213, 255);
+$blueLiner: rgb(231, 249, 253);
 $bcgDarkGreen0: rgba(112, 130, 70, 0);
 $bcgDarkGreen10: rgba(112, 130, 70, 0.1);
 $bcgGreen0: rgba(108, 198, 63, 0);
