--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -159,6 +159,7 @@
   width: 100%;
   height: 350px;
   object-fit: cover;
+  background-color: $gray;
 
   @media screen and (min-width: 1060px) {
     width: 50%;
